implementacao do endpoint que remove uma receita prevista e geracao da documentacao swagger
